data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_549.wast
;; 10. **Test Description**:     - Create nested functions where the outer function calls the inner function multiple times with `nop` instructions interleaved in both functions. Validate consistent return behavior.     - **Constraint Checked**: No disruption in function call and return paths due to `nop`.     - **Relation to CFG**: Confirms correct function call and return pathways in CFG even with the presence of `nop`.  These test descriptions focus on ensuring the `nop` instruction does not cause any inconsistencies or invalidations within the Control Flow Graph by respecting the scaffolding provided by the WebAssembly 2.0 specification.

(assert_invalid
  (module
    (func $inner (nop) (i32.const 0))
    (func $outer (call $inner) (nop) (call $inner) (i32.const 0))
  )
  "type mismatch"
)